// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wing compile -t tf-aws > main.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.15.2",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "root_testlog1_IamRole_3D62ABEB": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log1/IamRole",
            "uniqueId": "root_testlog1_IamRole_3D62ABEB",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_testlog2_IamRole_7773EE80": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log2/IamRole",
            "uniqueId": "root_testlog2_IamRole_7773EE80",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_testlog1_IamRolePolicy_E3942901": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log1/IamRolePolicy",
            "uniqueId": "root_testlog1_IamRolePolicy_E3942901",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_testlog1_IamRole_3D62ABEB.name}",
      },
      "root_testlog2_IamRolePolicy_F59DDE76": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log2/IamRolePolicy",
            "uniqueId": "root_testlog2_IamRolePolicy_F59DDE76",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_testlog2_IamRole_7773EE80.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_testlog1_IamRolePolicyAttachment_EA81CDB3": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log1/IamRolePolicyAttachment",
            "uniqueId": "root_testlog1_IamRolePolicyAttachment_EA81CDB3",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_testlog1_IamRole_3D62ABEB.name}",
      },
      "root_testlog2_IamRolePolicyAttachment_D424C0BD": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log2/IamRolePolicyAttachment",
            "uniqueId": "root_testlog2_IamRolePolicyAttachment_D424C0BD",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_testlog2_IamRole_7773EE80.name}",
      },
    },
    "aws_lambda_function": {
      "root_testlog1_F98C8031": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log1/Default",
            "uniqueId": "root_testlog1_F98C8031",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "test-log1-c8333bd5",
          },
        },
        "function_name": "test-log1-c8333bd5",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_testlog1_IamRole_3D62ABEB.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_testlog1_Code_49F9C67F.bucket}",
        "s3_key": "\${aws_s3_object.root_testlog1_S3Object_95AE7AEC.key}",
        "timeout": 30,
      },
      "root_testlog2_B951F90D": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log2/Default",
            "uniqueId": "root_testlog2_B951F90D",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "test-log2-c89ee849",
          },
        },
        "function_name": "test-log2-c89ee849",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_testlog2_IamRole_7773EE80.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_testlog2_Code_F54FF962.bucket}",
        "s3_key": "\${aws_s3_object.root_testlog2_S3Object_93F5CD8E.key}",
        "timeout": 30,
      },
    },
    "aws_s3_bucket": {
      "root_testlog1_Code_49F9C67F": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log1/Code",
            "uniqueId": "root_testlog1_Code_49F9C67F",
          },
        },
        "bucket_prefix": "code-c84d326c-",
      },
      "root_testlog2_Code_F54FF962": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log2/Code",
            "uniqueId": "root_testlog2_Code_F54FF962",
          },
        },
        "bucket_prefix": "code-c86426d8-",
      },
    },
    "aws_s3_object": {
      "root_testlog1_S3Object_95AE7AEC": {
        "//": {
          "metadata": {
            "path": "root/Default/test:log1/S3Object",
            "uniqueId": "root_testlog1_S3Object_95AE7AEC",
          },
        },
        "bucket": "\${aws_s3_bucket.root_testlog1_Code_49F9C67F.bucket}",
        "key": "<ASSET_KEY>",
      },
    },
  },
}
`;

exports[`wing compile -t tf-aws > preflight.js 1`] = `
"const $stdlib = require('@winglang/sdk');
const $outdir = process.env.WING_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		case \\"tf-gcp\\":
			return $stdlib.tfgcp.App;
		case \\"tf-azure\\":
			return $stdlib.tfazure.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

const cloud = require('@winglang/sdk').cloud;
class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"print\\", plugins: $plugins });
  
  {console.log(\\"preflight log\\")};
  this.node.root.newAbstract(\\"@winglang/sdk.cloud.Function\\",this,\\"test:log1\\",new $stdlib.core.Inflight(this, \\"$Inflight1\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.bf0feaf1bc98afc8eb1ba94d506b4dcd46af0da756a1a665f0e03f5a75b63422/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
    }
  }));
  this.node.root.newAbstract(\\"@winglang/sdk.cloud.Function\\",this,\\"test:log2\\",new $stdlib.core.Inflight(this, \\"$Inflight2\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.71a8edefcd0491d59b2cec2c14ce38019ce88de4e579784cec3340cc2e5a7d2d/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
    }
  }));
}
}
new MyApp().synth();"
`;

exports[`wing compile -t tf-aws > proc.71a8edefcd0491d59b2cec2c14ce38019ce88de4e579784cec3340cc2e5a7d2d/index.js 1`] = `
"async handle() { const {  } = this; {
  {console.log(\\"inflight log 2.1\\")};
  {console.log(\\"inflight log 2.2\\")};
} };"
`;

exports[`wing compile -t tf-aws > proc.bf0feaf1bc98afc8eb1ba94d506b4dcd46af0da756a1a665f0e03f5a75b63422/index.js 1`] = `
"async handle() { const {  } = this; {
  {console.log(\\"inflight log 1.1\\")};
  {console.log(\\"inflight log 1.2\\")};
} };"
`;

exports[`wing test > stdout 1`] = `
"preflight log
pass ┌ print.w » root/test:log1
     │ inflight log 1.1
     └ inflight log 1.2
pass ┌ print.w » root/test:log2
     │ inflight log 2.1
     └ inflight log 2.2"
`;
